# tiny-kiosk-browser

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  tiny-kiosk-browser.pro
Core/Inc/: browser.hpp
Core/Src/: browser.cpp  main.cpp
Src/Core/Inc/: browser.h
Src/Core/Src/: browser.c  main.c
